using css to create two sections, aligning text and objects. Bug - cannot get sections to contain screen height

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,6 +1,4 @@
-body {
-    background-color: #C6E2FF;
-}
+@import url('normalize.css')
 
 h1{
 	margin-top: 10%;
@@ -32,4 +30,27 @@ h1.high-usage {
 
 h1.low-usage {
  color: #228b22;
+}
+
+.display {
+	display: inline-block;
+	float: left;
+	width: 60%;
+	height: 100%;
+	text-align: right;
+
+}
+
+.temp-control, .power-saving-mode {
+	text-align: right;
+}
+
+.images {
+	color: white;
+	display: inline-block;
+	float: left;
+	background-color: black;
+	width: 40%;
+	height: 100%;
+	text-align: left;
 }
